--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^3.6.0",
     "react": "^18.2.0",
+    "react-date-picker": "^11.0.0",
+    "react-datepicker": "^7.1.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-loading": "^2.0.3"
   },
   "devDependencies": {
