--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.24.11",
+    "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-date-picker": "^11.0.0",
     "react-datepicker": "^7.1.0",
